# pennstate

./: .gitignore  demo_preproc_simple.c  gen_llvm_ir.sh  kansan_togle_diff.sh
demo/: build_preproc.sh  demo_preproc.c  exec_test.sh  test.c
preproc/: CMakeLists.txt  InactiveCodeTracker.cpp  QUICKREF.sh  TEST_RESULTS.md  build.sh  parse_annotations.py  run_test.sh  test_inactive.c
preproc/test_output/: test_inactive.c
